2019-09-02  DJ Lucas <dj@linuxfromscratch.org>
   * Remove elogind and mountcgroupfs bootscripts
   * Introduce $last facility for LSB-Tools and DM scripts

2019-03-13  Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Allow bridge to be created without INTERFACE_COMPONENTS

2018-12-16  DJ Lucas <dj@linuxfromscratch.org>
   * Add elogind bootscript
   * Add mountcgroupfs bootscript
   * Add accounts-daemon bootscript
   * Restore gdm bootscript

2018-01-05  Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Add lightdm bootscript

2017-07-31  Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Delete references to rpc.rquotad in nfs-server script

2017-06-11  Douglas R. Reno <renodr@linuxfromscratch.org>
   * Fix nfs-client and nfs-server scripts for change in nfs-utils

2017-01-27  Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Fix nfs-server script QUOTAS typo in status.

2016-09-02  Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Fix slapd script to better support initd-tools.

2016-08-08  Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Fix wpa script to not override a ctrl_interface setting
     in the configuration file.

2016-04-15  Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Add smartd bootscript

2015-09-24 Fernando de Oliveira <famobr at yahoo.com.br>
   * Fix again sddm bootscript.

2015-09-24 Fernando de Oliveira <famobr at yahoo.com.br>
   * Remove sddm fixes for upowerd.

2015-08-23 Fernando de Oliveira <famobr at yahoo.com.br>
   * Fix sddm for upowerd stop.

2015-08-15 Fernando de Oliveira <famobr at yahoo.com.br>
   * Add upowerd to sddm bootscript, for buttons to work (halt, reboot, etc.).
   * Fix lxdm uninstall target.

2015-08-01 Fernando de Oliveira <famobr at yahoo.com.br>
   * Add sddm bootscript
   * Reorder part of the Makefile.

2015-03-04 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Add uninstall for rpcbind

2015-02-09 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Fix nfs-client and nfs-server for recent nfs-utils
