@@ -1,3 +1,7 @@
+2019-10-25  DJ Lucas <dj@linuxfromscratch.org>
+   * Add firewalld bootscript
+   * Adjust network dependencies to account for firewall scripts
+
 2019-09-02  DJ Lucas <dj@linuxfromscratch.org>
    * Remove elogind and mountcgroupfs bootscripts
    * Introduce $last facility for LSB-Tools and DM scripts
